
CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )


# Program name

IF ( NOT PROGRAM_TITLE )
	SET ( PROGRAM_TITLE "QasHctl${PROGRAM_SUFFIX}" )
ENDIF ( NOT PROGRAM_TITLE )

IF ( NOT PROGRAM_NAME )
	SET ( PROGRAM_NAME "qashctl${PROGRAM_SUFFIX}" )
ENDIF ( NOT PROGRAM_NAME )


# Program version

SET ( VERSION_MAJOR "0" )
SET ( VERSION_MINOR "16" )

SET ( VERSION "${VERSION_MAJOR}.${VERSION_MINOR}" )


# Process subdirectories

ADD_SUBDIRECTORY ( src )
ADD_SUBDIRECTORY ( graphics )
ADD_SUBDIRECTORY ( share )
