
CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )


# Program name

IF ( NOT PROGRAM_TITLE )
	SET ( PROGRAM_TITLE "QasMixer${PROGRAM_SUFFIX}" )
ENDIF ( NOT PROGRAM_TITLE )

IF ( NOT PROGRAM_NAME )
	SET ( PROGRAM_NAME "qasmixer${PROGRAM_SUFFIX}" )
ENDIF ( NOT PROGRAM_NAME )


# Program version

SET ( VERSION_MAJOR "0" )
SET ( VERSION_MINOR "15" )

SET ( VERSION "${VERSION_MAJOR}.${VERSION_MINOR}" )


# Localization file prefix

SET ( L10N_PREFIX "${PROGRAM_NAME}_" )


# Installation directories

IF ( NOT INSTALL_DIR_DATA )
	SET ( INSTALL_DIR_DATA "share/${PROGRAM_NAME}" )
ENDIF ( NOT INSTALL_DIR_DATA )

IF ( NOT INSTALL_DIR_L10N )
	SET ( INSTALL_DIR_L10N "${INSTALL_DIR_DATA}/l10n" )
ENDIF ( NOT INSTALL_DIR_L10N )

IF ( NOT INSTALL_DIR_APP_ICONS )
	SET ( INSTALL_DIR_APP_ICONS "${INSTALL_DIR_DATA}/icons" )
ENDIF ( NOT INSTALL_DIR_APP_ICONS )

IF ( NOT INSTALL_DIR_WIDGETS_GRAPHICS )
	SET ( INSTALL_DIR_WIDGETS_GRAPHICS "${INSTALL_DIR_DATA}/widgets" )
ENDIF ( NOT INSTALL_DIR_WIDGETS_GRAPHICS )


# Process subdirectories

ADD_SUBDIRECTORY ( src )
ADD_SUBDIRECTORY ( graphics )
ADD_SUBDIRECTORY ( share )
ADD_SUBDIRECTORY ( doc )
